--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <p>Poseo un perfil técnico Desarrollador Fullstack con varios años de experiencias, apasionado por la
               tecnología y el aprendizaje continuo. </p>
             <p>Tengo una faceta de emprendedor que marca mi forma de trabajo.
-              Me considero una persona dinamica y facil de adaptar a cambios.</p>
+              Me considero una persona dinamica y facil de adaptarme a cambios.</p>
             <p class="w3-right-align">
               <a href="https://codepen.io/ndf14685/pens/" target="_blank" class="w3-right-align">
                 <span class="w3-tag w3-green w3-round">Proyectos Front <i class="fa fa-free-code-camp"></i></span>
@@ -267,7 +267,7 @@
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>EXPERIENCIA LABORAL</h2>
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Desarrollador Java SOA - Area Tecnica - Configuration Manager / Fusap SA -
+            <h5 class="w3-opacity"><b>Desarrollador Java SOA - Area T&eacute;cnica - Configuration Manager / Fusap SA -
                 Telecom</b>
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>MAR . 2018 - <span
@@ -466,8 +466,8 @@
               Linux; (2019)
               Javascript Avanzado Front-end; Node Js y Mongo DB (2019)
               Python Programming; Raspberry (2019)</p>
-              
-              <p>Android; Angular JS;
+
+            <p>Android; Angular JS;
               Patrones de diseño; UML y UP: Analisis y diseño Orientados a Objetos;
               Java Standard Programming, J2SE 7.0; Java Web: Servlets, JSP, JSTL, Struts & AJAX; Java WebServices; Java
               Advanced Programming; Java Hibernate;</p>
@@ -499,7 +499,7 @@
 
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> OCT . 2015 - <span
                 class="w3-tag w3-teal w3-round"> DIC . 2015 </span></h6>
-                <p>HTML5, Cascades y CSS5, Native C/C++, Adobe Air;</p>
+            <p>HTML5, Cascades y CSS5, Native C/C++, Adobe Air;</p>
             <hr>
           </div>
 
@@ -508,7 +508,7 @@
 
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> AGO . 2008 - <span
                 class="w3-tag w3-teal w3-round"> MAR . 2009 </span></h6>
-                <p>Lenguaje Cobol, Mainframe, DB2, JCL; Lenguaje SQL; Capacitación Normas CMMI; Introducción Unix;</p>
+            <p>Lenguaje Cobol, Mainframe, DB2, JCL; Lenguaje SQL; Capacitación Normas CMMI; Introducción Unix;</p>
             <hr>
           </div>
 
@@ -518,9 +518,9 @@
 
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> MAR . 2007 - <span
                 class="w3-tag w3-teal w3-round"> MAY . 2007 </span></h6>
-                <p>Introducción a Objetos; Diseño Orientados a Objetos; Desarrollo de Aplicaciones Web, con JSP Servlets y
-                  Struts; Taller de Desarrollo de Aplicaciones con Eclipse, CVS y Java; Java Básico;
-            <hr>
+            <p>Introducción a Objetos; Diseño Orientados a Objetos; Desarrollo de Aplicaciones Web, con JSP Servlets y
+              Struts; Taller de Desarrollo de Aplicaciones con Eclipse, CVS y Java; Java Básico;
+              <hr>
             </p>
           </div>
 
@@ -598,18 +598,30 @@
     });
   </script>
 
-  <!-- <script>
+  <script>
     (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
       (i[r].q = i[r].q || []).push(arguments)
     }, i[r].l = 1 * new Date(); a = s.createElement(o),
       m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
     })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-86874797-1', 'auto');
+    
+    ga('create', 'UA-154598920-1', 'auto');
     ga('send', 'pageview');
 
-  </script> -->
+  </script>
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154598920-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-154598920-1');
+</script> -->
+
 
 </body>
 
