--- a/index.html
+++ b/index.html
@@ -267,8 +267,11 @@
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>EXPERIENCIA LABORAL</h2>
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Desarrollador Java SOA - Area T&eacute;cnica - Configuration Manager / Fusap SA -
+            <h5 class="w3-opacity"><b>Desarrollador Java SOA - Area T&eacute;cnica - Configuration Manager / Fusap SA 
+              <img src="images/fusap.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              -
                 Telecom</b>
+                <img src="images/telecom.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>MAR . 2018 - <span
                 class="w3-tag w3-teal w3-round">ACTUALIDAD</span></h6>
@@ -290,7 +293,10 @@
           </div>
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Analista desarrollador Java Sr Middleware / Tata Consultancy Service SA</b></h5>
+            <h5 class="w3-opacity"><b>Analista desarrollador Java Sr Middleware / Tata Consultancy Service SA</b>
+              <img src="images/1280px-Tata_Consultancy_Services_Logo.svg.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <img src="images/hsbc-logo-320x150.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+            </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>OCT . 2017 - <span
                 class="w3-tag w3-teal w3-round">Jun . 2018</span></h6>
             <p>An&aacute;lisis y desarrollo de documentaci&oacute;n t&eacute;cnica y funcional, Programaci&oacute;n en
@@ -307,7 +313,9 @@
           </div>
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b> Analista desarrollador Java Ssr en Area de Arquitectura / Huenei SA</b></h5>
+            <h5 class="w3-opacity"><b> Analista desarrollador Java Ssr en Area de Arquitectura / Huenei SA</b>
+              <img src="images/huenei.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+            </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>OCT . 2014 - <span
                 class="w3-tag w3-teal w3-round"> Sept . 2017</span></h6>
             <p> An&aacute;lisis y desarrollo de documentaci&oacute;n t&eacute;cnica y funcional, Programaci&oacute;n en
@@ -328,7 +336,13 @@
 
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b> Consultor JAVA SOA – OSB (Oracle) / Pragma Consultores (Practia) </b></h5>
+            <h5 class="w3-opacity"><b> Consultor JAVA SOA – OSB (Oracle) / Pragma Consultores (Practia) </b>
+              <img src="images/Practia.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <!-- <img src="images/Practia.png" class="img-fluid" alt="Responsive image"> -->
+              <img src="images/telefonica.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <!-- <img src="images/telefonica.png" class="img-fluid" alt="Responsive image"> -->
+            
+            </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>AGO . 2013 - <span
                 class="w3-tag w3-teal w3-round"> OCT . 2014</span></h6>
             <p> An&aacute;lisis y desarrollo de documentaci&oacute;n t&eacute;cnica y funcional, Programaci&oacute;n en
@@ -345,7 +359,13 @@
 
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b> Consultor JAVA / Alcatel-Lucent - Telef&oacute;nica</b></h5>
+            <h5 class="w3-opacity"><b> Consultor JAVA / Alcatel-Lucent 
+              <img src="images/Alcatel_Lucent_Enterprise_Logo.svg" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <!-- <img src="images/Alcatel_Lucent_Enterprise_Logo.svg" class="img-fluid" alt="Responsive image"> -->
+              - Telef&oacute;nica</b>
+              <img src="images/telefonica.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <!-- <img src="images/telefonica.png" class="img-fluid" alt="Responsive image"> -->
+            </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>JUL . 2012 - <span
                 class="w3-tag w3-teal w3-round"> JUL . 2013</span></h6>
             <p> An&aacute;lisis y desarrollo de documentaci&oacute;n t&eacute;cnica y funcional, Programaci&oacute;n en
@@ -365,7 +385,13 @@
 
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b> Consultor JAVA / Everis SA - Telef&oacute;nica</b></h5>
+            <h5 class="w3-opacity"><b> Consultor JAVA / Everis SA 
+              <img src="images/everis.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <!-- <img src="images/everis.png" class="img-fluid" alt="Responsive image"> -->
+              - Telef&oacute;nica</b>
+              <img src="images/telefonica.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <!-- <img src="images/telefonica.png" class="img-fluid" alt="Responsive image"> -->
+            </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> AGO . 2011 - <span
                 class="w3-tag w3-teal w3-round"> JUL . 2012</span></h6>
             <p> An&aacute;lisis y desarrollo de documentaci&oacute;n t&eacute;cnica y funcional, Programaci&oacute;n en
@@ -380,7 +406,10 @@
           </div>
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b> Desarrollador Cobol / Accenture S.A. – Rosario </b></h5>
+            <h5 class="w3-opacity"><b> Desarrollador Cobol / Accenture S.A. – Rosario </b>
+              <img src="images/accenture.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <!-- <img src="images/accenture.png" class="img-fluid" alt="Responsive image"> -->
+            </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> SEPT . 2008 - <span
                 class="w3-tag w3-teal w3-round"> JUN . 2009</span></h6>
             <p>
@@ -394,6 +423,9 @@
 
           <div class="w3-container">
             <h5 class="w3-opacity"><b> Desarrollador Java / TGV Excelencia en Soluciones Inform&aacute;ticas S.A.</b>
+              <!-- <img src="images/TGV-Logo-sin-slogan.png" style="width:100%" alt="Avatar"> -->
+              <img src="images/TGV-Logo-sin-slogan.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <!-- <img src="images/TGV-Logo-sin-slogan.png" class="img-fluid" alt="Responsive image"> -->
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> MAR . 2007 - <span
                 class="w3-tag w3-teal w3-round"> MAR . 2008 </span></h6>
@@ -598,7 +630,7 @@
     });
   </script>
 
-  <script>
+  <!-- <script>
     (function (i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
         (i[r].q = i[r].q || []).push(arguments)
@@ -609,7 +641,7 @@
     ga('create', 'UA-154598920-1', 'auto');
     ga('send', 'pageview');
 
-  </script>
+  </script> -->
 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
