Agregado de iconos

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               <img src="images/fusap.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
               -
                 Telecom</b>
-                <img src="images/telecom.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+                <img src="images/cablevision_fibertel_personal.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>MAR . 2018 - <span
                 class="w3-tag w3-teal w3-round">ACTUALIDAD</span></h6>
