Agregado de iconos

--- a/index.html
+++ b/index.html
@@ -267,14 +267,19 @@
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>EXPERIENCIA LABORAL</h2>
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Desarrollador Java SOA - Area T&eacute;cnica - Configuration Manager / Fusap SA 
-              <img src="images/fusap.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
-              -
+            <h5 class="w3-opacity"><b>Desarrollador Java SOA - Area T&eacute;cnica - Configuration Manager / Fusap SA
+
+                -
                 Telecom</b>
-                <img src="images/cablevision_fibertel_personal.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>MAR . 2018 - <span
-                class="w3-tag w3-teal w3-round">ACTUALIDAD</span></h6>
+                class="w3-tag w3-teal w3-round">ACTUALIDAD</span>
+              <img src="images/fusap.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <img src="images/cablevision_fibertel_personal.png" alt="Responsive image" style="width: 10%"
+                class="img-thumbnail">
+
+            </h6>
             <p>Desarrollo de Servicios SOA para integraci&oacute;n de servicios, OSB (Oracle). Administraci&oacute;n de
               Ambientes Linux -
               OSB12c; Datapower IBM; Automatizaci&oacute;n de scripts bash; Soporte implementaci&oacute;n
@@ -294,11 +299,16 @@
 
           <div class="w3-container">
             <h5 class="w3-opacity"><b>Analista desarrollador Java Sr Middleware / Tata Consultancy Service SA</b>
-              <img src="images/1280px-Tata_Consultancy_Services_Logo.svg.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
-              <img src="images/hsbc-logo-320x150.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>OCT . 2017 - <span
-                class="w3-tag w3-teal w3-round">Jun . 2018</span></h6>
+                class="w3-tag w3-teal w3-round">Jun . 2018</span>
+              <img src="images/1280px-Tata_Consultancy_Services_Logo.svg.png" alt="Responsive image" style="width: 10%"
+                class="img-thumbnail">
+              <img src="images/hsbc-logo-320x150.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+            </h6>
+
+
             <p>An&aacute;lisis y desarrollo de documentaci&oacute;n t&eacute;cnica y funcional, Programaci&oacute;n en
               lenguaje
               JAVA, Integraci&oacute;n SOA. Ide:
@@ -314,10 +324,14 @@
 
           <div class="w3-container">
             <h5 class="w3-opacity"><b> Analista desarrollador Java Ssr en Area de Arquitectura / Huenei SA</b>
-              <img src="images/huenei.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>OCT . 2014 - <span
-                class="w3-tag w3-teal w3-round"> Sept . 2017</span></h6>
+                class="w3-tag w3-teal w3-round"> Sept . 2017</span>
+              <img src="images/huenei.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <img src="images/Logo-banco-Credicoop.jpg" alt="Responsive image" style="width: 10%"
+                class="img-thumbnail">
+            </h6>
             <p> An&aacute;lisis y desarrollo de documentaci&oacute;n t&eacute;cnica y funcional, Programaci&oacute;n en
               lenguaje
               JAVA. Ide: Eclipse.
@@ -337,14 +351,16 @@
 
           <div class="w3-container">
             <h5 class="w3-opacity"><b> Consultor JAVA SOA – OSB (Oracle) / Pragma Consultores (Practia) </b>
+
+
+            </h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>AGO . 2013 - <span
+                class="w3-tag w3-teal w3-round"> OCT . 2014</span>
               <img src="images/Practia.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
               <!-- <img src="images/Practia.png" class="img-fluid" alt="Responsive image"> -->
               <img src="images/telefonica.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
               <!-- <img src="images/telefonica.png" class="img-fluid" alt="Responsive image"> -->
-            
-            </h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>AGO . 2013 - <span
-                class="w3-tag w3-teal w3-round"> OCT . 2014</span></h6>
+            </h6>
             <p> An&aacute;lisis y desarrollo de documentaci&oacute;n t&eacute;cnica y funcional, Programaci&oacute;n en
               lenguaje
               JAVA. Desarrollo SOA, Ide: Eclipse,
@@ -359,15 +375,19 @@
 
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b> Consultor JAVA / Alcatel-Lucent 
-              <img src="images/Alcatel_Lucent_Enterprise_Logo.svg" alt="Responsive image" style="width: 10%" class="img-thumbnail">
-              <!-- <img src="images/Alcatel_Lucent_Enterprise_Logo.svg" class="img-fluid" alt="Responsive image"> -->
-              - Telef&oacute;nica</b>
-              <img src="images/telefonica.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
-              <!-- <img src="images/telefonica.png" class="img-fluid" alt="Responsive image"> -->
+            <h5 class="w3-opacity"><b> Consultor JAVA / Alcatel-Lucent - Telef&oacute;nica</b>
+
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>JUL . 2012 - <span
-                class="w3-tag w3-teal w3-round"> JUL . 2013</span></h6>
+                class="w3-tag w3-teal w3-round"> JUL . 2013</span>
+              <img src="images/Alcatel_Lucent_Enterprise_Logo.svg" alt="Responsive image" style="width: 10%"
+                class="img-thumbnail">
+              <!-- <img src="images/Alcatel_Lucent_Enterprise_Logo.svg" class="img-fluid" alt="Responsive image"> -->
+
+              <img src="images/telefonica.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <!-- <img src="images/telefonica.png" class="img-fluid" alt="Responsive image"> -->
+
+            </h6>
             <p> An&aacute;lisis y desarrollo de documentaci&oacute;n t&eacute;cnica y funcional, Programaci&oacute;n en
               lenguaje
               JAVA, JavaScript, JSP, Android.
@@ -385,15 +405,18 @@
 
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b> Consultor JAVA / Everis SA 
-              <img src="images/everis.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
-              <!-- <img src="images/everis.png" class="img-fluid" alt="Responsive image"> -->
-              - Telef&oacute;nica</b>
-              <img src="images/telefonica.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
-              <!-- <img src="images/telefonica.png" class="img-fluid" alt="Responsive image"> -->
+            <h5 class="w3-opacity"><b> Consultor JAVA / Everis SA - Telef&oacute;nica</b>
+
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> AGO . 2011 - <span
-                class="w3-tag w3-teal w3-round"> JUL . 2012</span></h6>
+                class="w3-tag w3-teal w3-round"> JUL . 2012</span>
+
+              <img src="images/everis.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <!-- <img src="images/everis.png" class="img-fluid" alt="Responsive image"> -->
+
+              <img src="images/telefonica.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <!-- <img src="images/telefonica.png" class="img-fluid" alt="Responsive image"> -->
+            </h6>
             <p> An&aacute;lisis y desarrollo de documentaci&oacute;n t&eacute;cnica y funcional, Programaci&oacute;n en
               lenguaje
               JAVA, con Herramientas WEB,
@@ -407,11 +430,13 @@
 
           <div class="w3-container">
             <h5 class="w3-opacity"><b> Desarrollador Cobol / Accenture S.A. – Rosario </b>
-              <img src="images/accenture.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
-              <!-- <img src="images/accenture.png" class="img-fluid" alt="Responsive image"> -->
+
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> SEPT . 2008 - <span
-                class="w3-tag w3-teal w3-round"> JUN . 2009</span></h6>
+                class="w3-tag w3-teal w3-round"> JUN . 2009</span>
+              <img src="images/accenture.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <!-- <img src="images/accenture.png" class="img-fluid" alt="Responsive image"> -->
+            </h6>
             <p>
               Realice tareas de programaci&oacute;n en lenguaje Cobol en diversos Proyectos asignados;
               Experiencia con Herramientas Cobol en entorno Mainframe, JCL, DB2;
@@ -423,12 +448,15 @@
 
           <div class="w3-container">
             <h5 class="w3-opacity"><b> Desarrollador Java / TGV Excelencia en Soluciones Inform&aacute;ticas S.A.</b>
+
+            </h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> MAR . 2007 - <span
+                class="w3-tag w3-teal w3-round"> MAR . 2008 </span>
               <!-- <img src="images/TGV-Logo-sin-slogan.png" style="width:100%" alt="Avatar"> -->
               <img src="images/TGV-Logo-sin-slogan.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
               <!-- <img src="images/TGV-Logo-sin-slogan.png" class="img-fluid" alt="Responsive image"> -->
-            </h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> MAR . 2007 - <span
-                class="w3-tag w3-teal w3-round"> MAR . 2008 </span></h6>
+
+            </h6>
             <p> Realice tareas de programaci&oacute;n en lenguaje Java en diversos Proyectos asignados.
               Utilizaci&oacute;n de
               Herramientas Web, Jsp, Servlets y Struts. Manejo de SQL, Cvs, JavaScript y HTML;
