Fix formulario de contacto

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
             <h2>Cont&aacute;ctame</h2>
           </div>
 
-          <!-- <form id="contact-form" class="w3-container" method="POST" action="https://formspree.io/xdoanane">
+          <form id="contact-form" class="w3-container" method="POST" action="https://formspree.io/xdoanane">
             <input type="hidden" name="_subject" value="Un nuevo mensaje desde tu CV · Nestor Fleitas" />
             <input type="text" name="_gotcha" style="display:none" />
 
@@ -605,19 +605,19 @@
 
             <br>
             <label for="input-correo" class="w3-label w3-text-teal"><b>Correo Electr&oacute;nico:</b></label>
-            <input id="input-correo" name="Correo" type="email" required="required" class="w3-input w3-border">
+            <input id="input-correo" name="_replyto" type="email" required="required" class="w3-input w3-border">
 
             <br>
             <label for="input-mensaje" class="w3-label w3-text-teal"><b>Mensaje:</b></label>
-            <textarea id="input-mensaje" name="Mensaje" required="required" class="w3-input w3-border"></textarea>
+            <textarea id="input-mensaje" name="message" required="required" class="w3-input w3-border"></textarea>
 
             <br>
             <button id="btn-submit" type="submit" class="w3-btn w3-teal w3-margin-bottom">Enviar</button>
-          </form> -->
+          </form>
 
           <!-- modify this form HTML and place wherever you want your form -->
 
-          <form action="https://formspree.io/xdoanane" method="POST">
+          <!-- <form action="https://formspree.io/xdoanane" method="POST">
             <label>
               Your email:
               <input type="text" name="_replyto">
@@ -627,10 +627,10 @@
               <textarea name="message"></textarea>
             </label>
 
-            <!-- your other form fields go here -->
+           
 
             <button type="submit">Send</button>
-          </form>
+          </form> -->
 
         </div>
 
