Agregado de iconos

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>MAR . 2018 - <span
                 class="w3-tag w3-teal w3-round">ACTUALIDAD</span>
-              <img src="images/fusap.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <!-- <img src="images/fusap.png" alt="Responsive image" style="width: 10%" class="img-thumbnail"> -->
               <img src="images/cablevision_fibertel_personal.png" alt="Responsive image" style="width: 10%"
                 class="img-thumbnail">
 
@@ -303,7 +303,7 @@
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>OCT . 2017 - <span
                 class="w3-tag w3-teal w3-round">Jun . 2018</span>
-              <img src="images/1280px-Tata_Consultancy_Services_Logo.svg.png" alt="Responsive image" style="width: 10%"
+              <!-- <img src="images/1280px-Tata_Consultancy_Services_Logo.svg.png" alt="Responsive image" style="width: 10%" -->
                 class="img-thumbnail">
               <img src="images/hsbc-logo-320x150.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
             </h6>
@@ -328,7 +328,7 @@
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>OCT . 2014 - <span
                 class="w3-tag w3-teal w3-round"> Sept . 2017</span>
-              <img src="images/huenei.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <!-- <img src="images/huenei.png" alt="Responsive image" style="width: 10%" class="img-thumbnail"> -->
               <img src="images/Logo-banco-Credicoop.jpg" alt="Responsive image" style="width: 10%"
                 class="img-thumbnail">
             </h6>
@@ -356,9 +356,10 @@
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>AGO . 2013 - <span
                 class="w3-tag w3-teal w3-round"> OCT . 2014</span>
-              <img src="images/Practia.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <!-- <img src="images/Practia.png" alt="Responsive image" style="width: 10%" class="img-thumbnail"> -->
               <!-- <img src="images/Practia.png" class="img-fluid" alt="Responsive image"> -->
               <img src="images/telefonica.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <img src="images/MovistarGreen.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
               <!-- <img src="images/telefonica.png" class="img-fluid" alt="Responsive image"> -->
             </h6>
             <p> An&aacute;lisis y desarrollo de documentaci&oacute;n t&eacute;cnica y funcional, Programaci&oacute;n en
@@ -385,6 +386,8 @@
               <!-- <img src="images/Alcatel_Lucent_Enterprise_Logo.svg" class="img-fluid" alt="Responsive image"> -->
 
               <img src="images/telefonica.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+              <img src="images/MovistarGreen.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
+
               <!-- <img src="images/telefonica.png" class="img-fluid" alt="Responsive image"> -->
 
             </h6>
