--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
           </div>
           <div class="w3-container">
-            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Desarrollador FullStack</p>
+            <p><h6><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Desarrollador FullStack </h6></p>
             <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Capital Federal, Argentina</p>
             <p><i class="fa fa-check fa-fw w3-margin-right w3-large w3-text-teal"></i>34 A&ntilde;os</p>
             <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i><a
@@ -57,56 +57,163 @@
                   class="fa fa-github fa-fw w3-large w3-text-teal"></i></a>
             </p>
             <hr>
+            <p class="w3-large w3-text-theme"><b><i
+                  class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Idiomas</b></p>
+            <p>Espa&ntilde;ol</p>
+            <div class="w3-progress-container w3-round-xlarge">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:100%"></div>
+            </div>
+            <p>Ingles</p>
+            <div class="w3-progress-container w3-round-xlarge">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:75%">
+                <div class="w3-center w3-text-white">75%</div>
+              </div>
+            </div>
 
-            <p class="w3-large"><b><i class="fa fa-bar-chart fa-fw w3-margin-right w3-text-teal"></i>Habilidades</b></p>
+            <p>Portugues</p>
+            <div class="w3-progress-container w3-round-xlarge">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:30%">
+                <div class="w3-center w3-text-white">30%</div>
+              </div>
+            </div>
+
+            <br>
+            <p class="w3-large"><b><i class="fa fa-handshake-o fa-fw w3-margin-right w3-text-teal"></i>Habilidades
+                Blandas</b></p>
+            <p>Buena comunicaci&oacute;n</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:90%">
+                <div class="w3-center w3-text-white">90%</div>
+              </div>
+            </div>
+            <p>Proactivo</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:80%">
+                <div class="w3-center w3-text-white">80%</div>
+              </div>
+            </div>
+            <p>Buena organizaci&oacute;n</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:70%">
+                <div class="w3-center w3-text-white">70%</div>
+              </div>
+            </div>
+            <p>Trabajo en equipo</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:80%">
+                <div class="w3-center w3-text-white">80%</div>
+              </div>
+            </div>
+            <p>Puntualidad</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:45%">
+                <div class="w3-center w3-text-white">45%</div>
+              </div>
+            </div>
+            <p>Pensamiento cr&iacute;tico</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:80%">
+                <div class="w3-center w3-text-white">80%</div>
+              </div>
+            </div>
+            <p>Sociable</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:90%">
+                <div class="w3-center w3-text-white">90%</div>
+              </div>
+            </div>
+            <p>Ser creativo</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:85%">
+                <div class="w3-center w3-text-white">85%</div>
+              </div>
+            </div>
+            <p>Habilidades interpersonales de comunicaci&oacute;n</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:75%">
+                <div class="w3-center w3-text-white">75%</div>
+              </div>
+            </div>
+            <p>Facilidad de adaptaci&oacute;n</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:70%">
+                <div class="w3-center w3-text-white">70%</div>
+              </div>
+            </div>
+            <p>Personalidad amigable</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:70%">
+                <div class="w3-center w3-text-white">70%</div>
+              </div>
+            </div>
+            <br>
+            <br>
+            <p class="w3-large"><b><i class="fa fa-bar-chart fa-fw w3-margin-right w3-text-teal"></i>Habilidades
+                T&eacute;cnicas</b></p>
             <p>Java</p>
             <div class="w3-progress-container w3-round-xlarge w3-small">
               <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:75%">
                 <div class="w3-center w3-text-white">75%</div>
               </div>
             </div>
-            <p>MySQL - PostgreSQL - MariaDB - Mongo DB</p>
-            <div class="w3-progress-container w3-round-xlarge w3-small">
-              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:55%">
-                <div class="w3-center w3-text-white">55%</div>
-              </div>
-            </div>
-            <p>Javascript</p>
-            <div class="w3-progress-container w3-round-xlarge w3-small">
-              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:70%">
-                <div class="w3-center w3-text-white">70%</div>
-              </div>
-            </div>
-            <p>React</p>
-            <div class="w3-progress-container w3-round-xlarge w3-small">
-              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:10%">
-                <div class="w3-center w3-text-white">10%</div>
-              </div>
-            </div>
-            <p>Cloud (AWS, GCloud, Azure)</p>
-            <div class="w3-progress-container w3-round-xlarge w3-small">
-              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:15%">
-                <div class="w3-center w3-text-white">15%</div>
-              </div>
-            </div>
-            <p>GIT</p>
+            <p>GIT <i class="fa fa-github"></i></p>
             <div class="w3-progress-container w3-round-xlarge w3-small">
               <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:75%">
                 <div class="w3-center w3-text-white">75%</div>
               </div>
             </div>
-            <p>Linux &iacute;nea de Comandos</p>
+            <p>Linux l&iacute;nea de Comandos <i class="fa fa-linux"></i></p>
             <div class="w3-progress-container w3-round-xlarge w3-small">
               <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:80%">
                 <div class="w3-center w3-text-white">80%</div>
               </div>
             </div>
+
+            <p>Javascript</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:65%">
+                <div class="w3-center w3-text-white">65%</div>
+              </div>
+            </div>
+
             <p>Desarrollo SOA - OSB12c</p>
             <div class="w3-progress-container w3-round-xlarge w3-small">
               <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:70%">
                 <div class="w3-center w3-text-white">70%</div>
               </div>
             </div>
+            <p>Docker</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:65%">
+                <div class="w3-center w3-text-white">65%</div>
+              </div>
+            </div>
+            <p>Kubernetes</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:45%">
+                <div class="w3-center w3-text-white">45%</div>
+              </div>
+            </div>
+
+            <p>Python</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:55%">
+                <div class="w3-center w3-text-white">55%</div>
+              </div>
+            </div>
+            <p>React</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:25%">
+                <div class="w3-center w3-text-white">25%</div>
+              </div>
+            </div>
+            <p>Cloud (AWS, GCloud, Azure)</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:25%">
+                <div class="w3-center w3-text-white">25%</div>
+              </div>
+            </div>
+
             <p>CSS3 - Frameworks</p>
             <div class="w3-progress-container w3-round-xlarge w3-small">
               <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:60%">
@@ -167,12 +274,6 @@
               </div>
             </div>
 
-            <p>Python</p>
-            <div class="w3-progress-container w3-round-xlarge w3-small">
-              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:55%">
-                <div class="w3-center w3-text-white">55%</div>
-              </div>
-            </div>
 
             <p>PHP</p>
             <div class="w3-progress-container w3-round-xlarge w3-small">
@@ -187,7 +288,19 @@
                 <div class="w3-center w3-text-white">60%</div>
               </div>
             </div>
+            <p>MySQL - PostgreSQL - MariaDB - Mongo DB</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:55%">
+                <div class="w3-center w3-text-white">55%</div>
+              </div>
+            </div>
 
+            <p>Mongo DB</p>
+            <div class="w3-progress-container w3-round-xlarge w3-small">
+              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:60%">
+                <div class="w3-center w3-text-white">60%</div>
+              </div>
+            </div>
             <p>Android</p>
             <div class="w3-progress-container w3-round-xlarge w3-small">
               <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:40%">
@@ -202,36 +315,9 @@
               </div>
             </div>
 
-            <p>Python</p>
-            <div class="w3-progress-container w3-round-xlarge w3-small">
-              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:55%">
-                <div class="w3-center w3-text-white">55%</div>
-              </div>
-            </div>
-
             <br>
 
-            <p class="w3-large w3-text-theme"><b><i
-                  class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Idiomas</b></p>
-            <p>Espa&ntilde;ol</p>
-            <div class="w3-progress-container w3-round-xlarge">
-              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:100%"></div>
-            </div>
-            <p>Ingles</p>
-            <div class="w3-progress-container w3-round-xlarge">
-              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:75%">
-                <div class="w3-center w3-text-white">75%</div>
-              </div>
-            </div>
 
-            <p>Portugues</p>
-            <div class="w3-progress-container w3-round-xlarge">
-              <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:30%">
-                <div class="w3-center w3-text-white">30%</div>
-              </div>
-            </div>
-
-            <br>
           </div>
         </div><br>
 
@@ -251,10 +337,10 @@
               Me considero una persona dinamica y facil de adaptarme a cambios.</p>
             <p class="w3-right-align">
               <a href="https://codepen.io/ndf14685/pens/" target="_blank" class="w3-right-align">
-                <span class="w3-tag w3-green w3-round">Proyectos Front <i class="fa fa-free-code-camp"></i></span>
+                <span class="w3-tag w3-green w3-round">Proyectos Front <i class="fa fa-codepen"></i></span>
               </a>
               <a href="https://github.com/ndf14685?tab=repositories" target="_blank" class="w3-right-align">
-                <span class="w3-tag w3-green w3-round">Repo Github <i class="fa fa-free-code-camp"></i></span>
+                <span class="w3-tag w3-green w3-round">Repo Github <i class="fa fa-github"></i></span>
               </a>
             </p>
 
@@ -276,8 +362,7 @@
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>MAR . 2018 - <span
                 class="w3-tag w3-teal w3-round">ACTUALIDAD</span>
               <!-- <img src="images/fusap.png" alt="Responsive image" style="width: 10%" class="img-thumbnail"> -->
-              <img src="images/cablevision_fibertel_personal.png" alt="Responsive image" style="width: 10%"
-                class="img-thumbnail">
+              <img src="images/telecom.png" alt="Responsive image" style="width: 25%" class="img-thumbnail">
 
             </h6>
             <p>Desarrollo de Servicios SOA para integraci&oacute;n de servicios, OSB (Oracle). Administraci&oacute;n de
@@ -292,7 +377,7 @@
 
 
               Cliente / Proyecto: Area Tecnica MDW - Telecom(On Site)
-
+              Consultora: Fusap SA
               Direcci&oacute;n: Av. Congreso 3924 – Cap. Fed.</p>
             <hr>
           </div>
@@ -304,7 +389,7 @@
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>OCT . 2017 - <span
                 class="w3-tag w3-teal w3-round">Jun . 2018</span>
               <!-- <img src="images/1280px-Tata_Consultancy_Services_Logo.svg.png" alt="Responsive image" style="width: 10%" -->
-                class="img-thumbnail">
+              class="img-thumbnail">
               <img src="images/hsbc-logo-320x150.png" alt="Responsive image" style="width: 10%" class="img-thumbnail">
             </h6>
 
@@ -350,7 +435,7 @@
 
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b> Consultor JAVA SOA – OSB (Oracle) / Pragma Consultores (Practia) </b>
+            <h5 class="w3-opacity"><b> Consultor JAVA SOA – OSB / Telefonica-Movistar </b>
 
 
             </h5>
@@ -369,14 +454,14 @@
               Integraci&oacute;n de m&oacute;dulos comerciales, utilizando OSB, BPel, WebServices, Spring, EJB.
               Soporte Migraci&oacute;n, Gesti&oacute;n de incidencias.
               Cliente / Proyecto: Telef&oacute;nica-Movistar
-
+              Consultora: Pragma Consultores (Practia)
               Direcci&oacute;n: San Martin 550 – Cap. Fed.</p>
             <hr>
           </div>
 
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b> Consultor JAVA / Alcatel-Lucent - Telef&oacute;nica</b>
+            <h5 class="w3-opacity"><b> Consultor JAVA / Telef&oacute;nica</b>
 
             </h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>JUL . 2012 - <span
@@ -401,6 +486,7 @@
               Investigaci&oacute;n de nuevas herramientas y documentaci&oacute;n t&eacute;cnica / funcional.
               Metodolog&iacute;as Agiles - Scrum
               Cliente / Proyecto: Telef&oacute;nica
+              Consultora: Alcatel-Lucent
 
               Direcci&oacute;n: Av. Vieytes 1710 – Cap. Fed. </p>
             <hr>
