Agregado logo equifax

--- a/index.html
+++ b/index.html
@@ -352,6 +352,30 @@
               class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>EXPERIENCIA LABORAL</h2>
 
           <div class="w3-container">
+            <h5 class="w3-opacity"><b>SRE - DevOps - EQUIFAX</b>
+
+            </h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>FEB . 2020 - <span
+                class="w3-tag w3-teal w3-round">ACTUALIDAD</span>
+              <!-- <img src="images/fusap.png" alt="Responsive image" style="width: 10%" class="img-thumbnail"> -->
+              <img src="images/equifax.png" alt="Responsive image" style="width: 25%" class="img-thumbnail">
+
+            </h6>
+            <p>
+            Desarrollo de microservicios / Aplicativos;
+            Armado de ambientes para microservicios;
+            Nube: GCloud, Terraform, Kubernetes, Docker
+            Desarrollo de microservicios: Java, Springboot, Angular 8
+            Soporte de implementaci&oacute;n y post implementaci&oacute;n
+
+<br>
+              Cliente / Proyecto: Datafabric - EQUIFAX (On Site)
+              Consultora: Asap Consulting SA
+              Direcci&oacute;n: Lavalle 333 – Cap. Fed.</p>
+            <hr>
+          </div>
+
+          <div class="w3-container">
             <h5 class="w3-opacity"><b>Desarrollador Java SOA - Area T&eacute;cnica - Configuration Manager / 
                 Telecom</b>
 
@@ -372,7 +396,7 @@
               Participe en las propuestas de soluciones de arquitectura y desarrollo y en la toma de decisiones de las
               mismas.
 
-
+<br>
               Cliente / Proyecto: Area Tecnica MDW - Telecom(On Site)
               Consultora: Fusap SA
               Direcci&oacute;n: Av. Congreso 3924 – Cap. Fed.</p>
@@ -397,7 +421,7 @@
               RTC,
               IID (IBM), SoapUI .
               Integraci&oacute;n de m&oacute;dulos a trav&eacute;s de conectores contra Middleware ESB (IBM).
-
+<br>
               Cliente / Proyecto: HSBC - Equipo de Middleware(On Site)
               Consultora: Tata Consultancy Service SA
               Direcci&oacute;n: Av. Martin Garcia 464 – Cap. Fed.</p>
@@ -421,6 +445,7 @@
               Investigaci&oacute;n de nuevas tecnolog&iacute;as Open source: Couchdb, Node Js, Angular JS, ElasticSearch
               logstash y Kibana, Jenkins.
               Migraci&oacute;n de nuevas versiones.
+              <br />
               Cliente / Proyecto: Gerencia de Sistemas - Banco Credicoop (On Site)
               Consultora: Huenei SA
               Direcci&oacute;n: Maipu 66 – Cap. Fed. </p>
@@ -450,6 +475,7 @@
               OEPE, JDeveloper. Tomcat. Oracle Service Bus (OSB), Weblogic.
               Integraci&oacute;n de m&oacute;dulos comerciales, utilizando OSB, BPel, WebServices, Spring, EJB.
               Soporte Migraci&oacute;n, Gesti&oacute;n de incidencias.
+              <br />
               Cliente / Proyecto: Telef&oacute;nica-Movistar
               Consultora: Pragma Consultores (Practia)
               Direcci&oacute;n: San Martin 550 – Cap. Fed.</p>
@@ -482,6 +508,7 @@
               Servidores RedHat. Desarrollo en Java, android. WebServices, SoapUi.
               Investigaci&oacute;n de nuevas herramientas y documentaci&oacute;n t&eacute;cnica / funcional.
               Metodolog&iacute;as Agiles - Scrum
+              <br>
               Cliente / Proyecto: Telef&oacute;nica
               Consultora: Alcatel-Lucent
 
@@ -507,6 +534,7 @@
               lenguaje
               JAVA, con Herramientas WEB,
               Hibernate, etc.
+              <br>
               Cliente / Proyecto: Telef&oacute;nica – Movistar;
               Consultora: Everis SA
               Direcci&oacute;n: Av. Garay 650 – Cap. Fed.
@@ -526,6 +554,7 @@
             <p>
               Realice tareas de programaci&oacute;n en lenguaje Cobol en diversos Proyectos asignados;
               Experiencia con Herramientas Cobol en entorno Mainframe, JCL, DB2;
+              <br>
               Direcci&oacute;n: Av. Santa Fe 1047 – Rosario (Sta. Fe)
             </p>
             <hr>
@@ -546,7 +575,7 @@
             <p> Realice tareas de programaci&oacute;n en lenguaje Java en diversos Proyectos asignados.
               Utilizaci&oacute;n de
               Herramientas Web, Jsp, Servlets y Struts. Manejo de SQL, Cvs, JavaScript y HTML;
-
+<br>
               Direcci&oacute;n: Av. Rivadavia 413 6º - Capital Federal (Bs. As.) Tel: 4345-5999
             </p>
             <hr>
